--- a/react/docker-compose.yaml
+++ b/react/docker-compose.yaml
@@ -1,12 +1,15 @@
 version: '3.7'
 services:    
-    react:
+    node_modules:
         build: .        
         container_name: react
         volumes:
-            - ${SRC_PATH}:/root/src
+            - node_modules_volume:/root/src
         tty: true
         hostname: react         
         ports: 
             - 3000:3000
         restart: always
+
+volumes: 
+    node_modules_volume:
