--- a/java/sample/v1/Dockerfile
+++ b/java/sample/v1/Dockerfile
@@ -4,6 +4,8 @@ USER root
 RUN dnf update -y
 RUN yum update -y
 
+RUN dnf install git
+
 WORKDIR /usr/local/src
 
 # will add auto install(/opt/amazon-corretto-11-x64-linux-jdk, ln -s /opt/amazon-corretto-11-x64-linux-jdk /opt/java)
