--- a/java/sample/docker-compose.yaml
+++ b/java/sample/docker-compose.yaml
@@ -3,8 +3,8 @@ services:
     db:
         image: postgres:latest
         container_name: sb_db
-        # ports:
-            # - 5432:5432
+        ports:
+            - 5432:5432
         volumes:
             - postgres_volume:/var/lib/postgresql/data
         environment:
