--- a/cshape/asp/Dockerfile
+++ b/cshape/asp/Dockerfile
@@ -4,13 +4,14 @@ USER root
 ENV TZ JST-9
 ENV TERM xterm
 
-RUN apt upgrade -y
-RUN apt-get upgrade -y
-RUN apt-get update -y
+# RUN apt upgrade -y
+# RUN apt-get upgrade -y
+# RUN apt-get update -y
 RUN apt update -y
 # RUN apt install vim nodejs npm wget tar git httpd httpd-tools httpd-devel httpd-manual -y
 # RUN apt install vim nodejs npm wget tar git apache2 -y
-RUN apt install vim wget tar git apache2 -y
+# RUN apt install vim wget tar git apache2 -y
+RUN apt install vim wget tar -y
 
 # RUN apt module reset nodejs -y
 # RUN apt module install nodejs:14 -y
@@ -32,10 +33,10 @@ RUN echo "export DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=1" >> /etc/profile.d/dotn
 RUN echo "export ASPNETCORE_ENVIRONMENT=Development" >> /etc/profile.d/dotnet.sh
 RUN echo "# Add .NET Core SDK tools" >> /etc/profile.d/dotnet.sh
 RUN echo "export PATH=\$PATH:/root/.dotnet/tools" >> /etc/profile.d/dotnet.sh
-RUN source /etc/profile.d/dotnet.sh
+RUN sh /etc/profile.d/dotnet.sh
 
 # update dotnet ef commamd
-RUN dotnet tool update --global dotnet-ef
+# RUN dotnet tool update --global dotnet-ef
 
 # RUN npm install -g npm-check-updates
 # RUN npm update
