--- a/sample/context/Dockerfile_dotnet6
+++ b/sample/context/Dockerfile_dotnet6
@@ -4,20 +4,20 @@ USER root
 ENV TZ JST-9
 ENV TERM xterm
 
+RUN apt upgrade -y
 RUN apt update -y
-# RUN apt install vim nodejs npm wget tar git httpd httpd-tools httpd-devel httpd-manual -y
-# RUN apt install vim nodejs npm wget tar git -y
-# RUN apt install vim wget tar git apache2 -y
-RUN apt install vim wget tar -y
+
+RUN apt install tzdata -y
+RUN apt install vim wget tar git apache2 -y
 
 RUN mkdir /usr/local/src/download
 RUN cd /usr/local/src/download
 
 # # Download .NET6 SDK
-RUN wget https://download.visualstudio.microsoft.com/download/pr/5fcb98bb-21e1-47a5-bb8e-bb25f41a3e52/04811d5d05b7e694f040d2a13c1aae4c/dotnet-sdk-6.0.100-rc.1.21463.6-linux-x64.tar.gz
+RUN wget https://download.visualstudio.microsoft.com/download/pr/17b6759f-1af0-41bc-ab12-209ba0377779/e8d02195dbf1434b940e0f05ae086453/dotnet-sdk-6.0.100-linux-x64.tar.gz
 
 RUN mkdir /opt/dotnet
-RUN tar zxvf dotnet-sdk-6.0.100-rc.1.21463.6-linux-x64.tar.gz -C /opt/dotnet
+RUN tar zxvf dotnet-sdk-6.0.100-linux-x64.tar.gz -C /opt/dotnet
 
 # # add dotnet command path
 RUN echo "#!/bin/sh" > ~/.bashrc
@@ -27,19 +27,8 @@ RUN echo "export DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=1" >> ~/.bashrc
 RUN echo "export ASPNETCORE_ENVIRONMENT=Development" >> ~/.bashrc
 RUN echo "# Add .NET Core SDK tools" >> ~/.bashrc
 RUN echo "export PATH=\$PATH:/root/.dotnet/tools" >> ~/.bashrc
-# # RUN sh /etc/profile.d/dotnet.sh
-
-# # RUN echo "#!/bin/sh" > /etc/profile.d/dotnet.sh
-# # RUN echo "export DOTNET_ROOT=/opt/dotnet" >> /etc/profile.d/dotnet.sh
-# # RUN echo "export PATH=\$DOTNET_ROOT:\$PATH" >> /etc/profile.d/dotnet.sh
-# # RUN echo "export DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=1" >> /etc/profile.d/dotnet.sh
-# # RUN echo "export ASPNETCORE_ENVIRONMENT=Development" >> /etc/profile.d/dotnet.sh
-# # RUN echo "# Add .NET Core SDK tools" >> /etc/profile.d/dotnet.sh
-# # RUN echo "export PATH=\$PATH:/root/.dotnet/tools" >> /etc/profile.d/dotnet.sh
-# # RUN sh /etc/profile.d/dotnet.sh
 
 # # update dotnet ef commamd
-# # RUN dotnet tool update --global dotnet-ef
+RUN /opt/dotnet/dotnet tool update --global dotnet-ef
 
-# # RUN npm install -g npm-check-updates
-# # RUN npm update
+CMD ["apachectl", "-D", "FOREGROUND"]
